# orderflow

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.hypothesis/constants/: 248a15688ac44fba  256fc1e82fa72405  3ab147ca9cb3932f  4899ee4f33d7bcef  67b0a8ccf18bf5d2  6c892531df08bfd9  9ccb9d8d64304177  a4f678917e04ba5a  bccac9d61beb74c3  bf9005f03217134e  d3379e2e232e6a09  d43fbfd7ca6f29ed  d69bece0a663220b  da64d4dd73db9fa3  dc855479a6741264  dd0abe6c44732caf  fa0cf7508294b7a5
data/: catalogue.json
docs/: cli_contract.md
docs/lo1/: README.md  appropriateness.md  levels.md  requirements.json  requirements.md  test-approach.md  test-model.md  traceability.csv
docs/lo2/: README.md  instrumentation.md  instrumentation_review.md  plan_evolution.md  plan_review.md  test_inventory.csv  test_plan.md
docs/lo3/: README.md  evaluation_criteria.md  evaluation_results.md  implemented_vs_planned.md  results_log.md  results_summary.md  techniques.md
docs/lo4/: README.md  results_log.md  results_summary.md
docs/lo5/: README.md  (+8 more)
scripts/: lo3_combinatorial_generate.py  lo3_combinatorial_plan.md  lo3_compute_metrics.py  lo3_extract_plan_status.py  lo3_model_coverage.py  lo3_model_spec.md  lo4_benchmark.py  lo4_compare.py  lo4_environment.py  lo4_extract_lo3_metrics.py  lo4_generate_summary.py  lo4_stats.py  lo4_targets.py  lo5_environment.py  lo5_generate_summary.py  lo5_review_checks.py  run_lo3_evidence.sh  run_lo4_evidence.sh  run_lo5_evidence.sh  validate_lo1.py  validate_lo2.py  validate_lo4.py  validate_lo5.py
tests/: README.md  conftest.py
(+49 files in other folders)
