[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orderflow"
version = "0.1.0"
description = "OrderFlow: a small Python order intake + state + fulfillment CLI system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
orderflow = "orderflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
